#################################################################################
# See LICENSE.md for full license information.                                  #
# Software: Drasil Blockchain Application Framework                             #
# License: Drasil Source Available License v1.0                                 #
# Licensors: Torben Poguntke (torben@drasil.io) & Zak Bassey (zak@drasil.io)    #
#################################################################################
[package]
name = "mimir"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - DBsync library"
repository = "https://github.com/Sbcdn/mimir.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0.0", features = [
    "postgres",
    "numeric",
    "chrono",
    "64-column-tables",
    "r2d2",
    "serde_json",
] }
diesel-derive-enum = { version = "2.0.0", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
log = "0.4"
hex = "0.4"
thiserror = "1.0.32"

murin = { path = "../murin", version = "0.1.0" }

[dev-dependencies]
tokio-test = "*"
