#################################################################################
# See LICENSE.md for full license information.                                  #
# Software: Drasil Blockchain Application Framework                             #
# License: Drasil Source Available License v1.0                                 #
# Licensors: Torben Poguntke (torben@drasil.io) & Zak Bassey (zak@drasil.io)    #
#################################################################################

[package]
name = "murin"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Cardano Blockchain Library"
repository = "https://github.com/Sbcdn/murin.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
chrono = "0.4.19"
cardano-serialization-lib = "11.0.5"
pretty_env_logger = "0.4.0"
log = "0.4"
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
#serde_with = "2.0.1"
hex = "0.4"
ed25519-bip32 = "0.4.1"
encoding_rs = "0.8.30"
#emurgo-message-signing = { path= "utils/message-signing/rust" }
num = "0.4.0"
redis = { version = "0.21.5", features = ["tokio-comp", "cluster"] }
sha2 = "0.10.2"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
http = "0.2.6"
cbor_event = "2.1.3"
octavo-digest = "0.1.2"
bech32 = "0.4.0"
futures = "0.3.21"
argon2 = "0.4.0"
itertools = "0.10.3"
thiserror = "1.0.32"
bigdecimal = { version = "0.3.0", features = ["serde"] }
strum = "0.24"
strum_macros = "0.24"
cryptoxide = { git = "https://github.com/typed-io/cryptoxide.git", branch = "master", features = [
    "blake2",
] }
bip39 = "1.0.1"
