#################################################################################
# Business Source License           See LICENSE.md for full license information.#
# Licensor:             Drasil Blockchain Association                           #
# Licensed Work:        Drasil Application Framework v.0.2. The Licensed Work   #
#                       is © 2022 Drasil Blockchain Association                 #
# Additional Use Grant: You may use the Licensed Work when your application     #
#                       using the Licensed Work is generating less than         #
#                       $150,000 and the entity operating the application       #
#                       engaged equal or less than 10 people.                   #
# Change Date:          Drasil Application Framework v.0.2, change date is two  #
#                       and a half years from release date.                     #
# Change License:       Version 2 or later of the GNU General Public License as #
#                       published by the Free Software Foundation.              #
#################################################################################

[package]
name = "frigg"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Client Portal API"
repository = "https://github.com/Sbcdn/frigg.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
jsonwebtoken = { version = "8.1.0", features = ["use_pem"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4"
structopt = "0.3.26"
lazy_static = "1.4.0"

hex = "0.4"
reqwest = { version = "0.11.9", default-features = false, features = [
    "json",
    "rustls-tls",
] }
pretty_env_logger = "0.4.0"
log = "0.4"

lettre = { version = "0.10.0-beta.2", default-features = false, features = [
    "builder",
] }
rusoto_core = { version = "0.48.0", default-features = false, features = [
    "rustls",
] }
rusoto_ses = { version = "0.48.0", default-features = false, features = [
    "rustls",
] }
base64 = "0.13"

hugin = { path = "../../libs/hugin", version = "0.1.0" }
murin = { path = "../../libs/murin", version = "0.1.0" }
sleipnir = { path = "../../libs/sleipnir", version = "0.1.0" }
