[package]
name = "frigg"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Client Portal API"
repository = "https://github.com/Sbcdn/frigg.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]


[dependencies]
jsonwebtoken = { version = "8.1.0", features = ["use_pem"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
futures = "0.3.25"
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4"
structopt = "0.3.26"
lazy_static = "1.4.0"
bytes = "1.3.0"
hex = "0.4"
base64 = "0.13"
lapin = { version = "2.1.1", features = ["rustls"] }
tokio-amqp = "2.0.0"
deadpool = "0.9.5"
deadpool-lapin = { version = "0.10.0", features = ["serde"] }
ratelimit_meter = "5.0.0"
nonzero_ext = "0.3.0"
pretty_env_logger = "0.4.0"
log = "0.4"

drasil-hugin = { path = "../../drasil-hugin", version = "0.1.0" }
drasil-murin = { path = "../../drasil-murin", version = "0.1.0" }
drasil-sleipnir = { path = "../../drasil-sleipnir", version = "0.1.0" }


[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = [ "json", "rustls-tls" ]

[dependencies.lettre]
version = "0.10.0-beta.2"
default-features = false
features = [ "builder" ]

[dependencies.rusoto_core]
version = "0.48.0"
default-features = false
features = [ "rustls" ]

[dependencies.rusoto_ses]
version = "0.48.0"
default-features = false
features = [ "rustls" ]
