[package]
name = "heimdallr"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Application Gateway"
repository = "https://github.com/Sbcdn/heimdallr.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]


[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
pretty_env_logger = "0.4.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"
serde_bytes = "0.11.5"
structopt = "0.3.26"
jsonwebtoken = { version = "8.1.0", features = ["use_pem"] }
thiserror = "1.0"
bytes = "1"

hugin = { path = "../../libs/hugin", version = "0.1.0" }
